--- a/todo_app/lib/todo_app_web/templates/layout/app.html.eex
+++ b/todo_app/lib/todo_app_web/templates/layout/app.html.eex
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="light-blue" style="padding: 0 20px;">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo">Logo</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
