feat: add schema to user

--- a/todo_app/lib/todo_app_web/templates/layout/app.html.eex
+++ b/todo_app/lib/todo_app_web/templates/layout/app.html.eex
@@ -10,18 +10,15 @@
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
-    <header>
-      <nav class="light-blue" style="padding: 0 20px;">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <nav class="light-blue" style="padding: 0 20px;">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/tarefa">Todas Tarefas</a></li>
+          <li><a href="/tarefa/new">Nova Tarefa</a></li>
+        </ul>
+      </div>
+    </nav>
     <main role="main" class="container">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
