--- a/todo_app/lib/todo_app_web/templates/tarefa/new.html.eex
+++ b/todo_app/lib/todo_app_web/templates/tarefa/new.html.eex
@@ -1,4 +1,10 @@
 <%= form_for @changeset, Routes.tarefa_path(@conn, :create), fn f -> %>
-  <%= text_input f, :titulo, placeholder: "Titulo", class: "form-control" %>
-  <%= text_input f, :pronta, placeholder: "Pronta", class: "form-control" %>
+  <div class="form-group">
+    <%= text_input f, :titulo, placeholder: "Titulo", class: "form-control" %>
+    <%= select f, :pronta, ["Sim", "Não"], class: "form-control", style: "display: block",
+      prompt: "A tarefa está pronta ?"
+    %>
+  </div>
+
+  <%= submit "Criar tarefa", class: "btn btn-primary", style: "margin-top: 10px" %>
 <% end %>
